fix the z-index of the menu

--- a/app/assets/stylesheets/activity-menu.scss
+++ b/app/assets/stylesheets/activity-menu.scss
@@ -17,11 +17,8 @@
   .sticky-wrapper {
     margin-bottom: 0px;
     position: fixed;
+    z-index: 1;
   }
-}
-
-#nav-activity-menu {
-  z-index: 1;
 }
 
 #nav-activity-menu {
